[project]
name = "url-to-png"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "flake8>=7.2.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "selenium>=4.31.0",
    "webdriver-manager>=4.0.2",
]
